<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/card_padding">

        <ImageView
            android:id="@+id/ivJewelryImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_medium">

            <TextView
                android:id="@+id/tvTypeBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jewelry_type_keychain"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:textColor="@color/gothic_pink"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/app_name"
                android:textSize="@dimen/text_small"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/price_format"
                android:textSize="@dimen/text_very_large"
                android:textStyle="bold"
                android:textColor="@color/gothic_pink" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
